--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meu Site</title>
+    <title>Meu </title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Bem-vindo ao Meu Site!</h1>
-    <p>Este é um site de exemplo.</p>
+    <p>Este um site de exemplo.</p>
     <script src="script.js"></script>
 </body>
 </html>
