--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Bem-vindo ao Meu Site!</h1>
+    <h1>Bem-vido ao Meu Site!</h1>
     <p>Este um site de exemplo.</p>
     <script src="script.js"></script>
 </body>
