--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nippofun</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
 </head>
 
 <body>
@@ -24,6 +26,10 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="livros.html">Livros</a></li>
                     <li><a href="contato.html">Contato</a></li>
+                    <li><button class="carrinho" onclick="window.location.href='carrinho.html'">
+                        <i class="fas fa-shopping-cart"></i> Carrinho
+                        <span class="quantidade" id="quantidadeCarrinho">0</span>
+                      </button></li>
                 </ul>
             </nav>
         </div>
@@ -34,7 +40,10 @@
             <h2>Descubra Novos Mundos</h2>
             <p>Explore nossa vasta coleção de livros dos mais diversos gêneros.</p>
             <p>Reservamos nosso tempo e espaço dedicado única e exclusivamente para os amantes de livros e mangás!</p>
-            <a href="livros.html" class="btn">Ver Livros</a>
+
+            <br><br>
+            <a href="livros.html" class="botao-link">Clique para conferir nossos produtos</a>
+
         </div>
     </section>
 
