--- a/index.html
+++ b/index.html
@@ -47,6 +47,10 @@
         </div>
     </section>
 
+    <div id="promo-banner" style="display: none; background-color: #ffcc00; padding: 10px; text-align: center;">
+        <p>Promoção! 20% de desconto em todos os produtos! <button id="close-promo">Fechar</button></p>
+      </div>
+ 
      <footer>
             <p>&copy; Direitos Reservados a Nippofun Int.</p>
         </div>
