--- a/contato.html
+++ b/contato.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nippofun</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 
 <body>
@@ -18,6 +19,10 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="livros.html">Livros</a></li>
                     <li><a href="contato.html">Contato</a></li>
+                    <li><button class="carrinho" onclick="window.location.href='carrinho.html'">
+                        <i class="fas fa-shopping-cart"></i> Carrinho
+                        <span class="quantidade" id="quantidadeCarrinho">0</span>
+                      </button></li>
                 </ul>
             </nav>
         </div>
