Mudanças na tela de produtos
Botão comprar está adicionando o nome dos produtos em um vetor, pra que depois possa ser mostrado quais produtos foram comprados na futura janela "carrinho

--- a/contato.html
+++ b/contato.html
@@ -43,8 +43,9 @@
            <input type="email" name="mail" id="mail" placeholder="Email" required>
            <input type="text" name="assunto" id="assunto" placeholder="Assunto"  required>
            <textarea name="msg" id="msg" placeholder="Mensagem" required></textarea>
-          <button type="submite">Enviar</button>
+          <button type="submit">Enviar</button>
         </form>
+        <p id="form-message" style="color: red; display: none;"></p>
     </div>
     <footer>
             <p>&copy; Direitos Reservados a Nippofun Int..</p>
