--- a/index.html
+++ b/index.html
@@ -43,6 +43,16 @@
         </div>
     </section>
 
+    <div class="carrossel">
+        <div class="imagens-carrossel">
+          <img src="1.png" alt="Imagem 1">
+          <img src="3.png" alt="Imagem 2">
+          <img src="4.png" alt="Imagem 3">
+        </div>
+        <button class="anterior" onclick="imagemAnterior()">&#10094;</button>
+        <button class="proximo" onclick="proximaImagem()">&#10095;</button>
+      </div>
+
     <footer>
         <p>&copy; Direitos Reservados a Nippofun Int.</p>
     </footer>
