--- a/index.html
+++ b/index.html
@@ -35,24 +35,21 @@
 
     <section class="hero">
         <div class="container">
-            <h2>Descubra Novos Mundos</h2>
-            <p>Explore nossa vasta coleção de livros dos mais diversos gêneros.</p>
-            <p>Reservamos nosso tempo e espaço dedicado única e exclusivamente para os amantes de livros e mangás!</p>
+            <h2>Seja bem vindo a Nippofun</h2>
+            <p>A sua loja de mangás</p>
+            <p>Sua jornada no mundo dos mangás começa aqui! Explore coleções exclusivas, lançamentos e raridades selecionadas para os verdadeiros fãs da cultura japonesa.</p>
             <br><br>
             <a href="livros.html" class="botao-link">Clique para conferir nossos produtos</a>
         </div>
     </section>
 
-    <div class="carrossel">
-        <div class="imagens-carrossel">
-          <img src="1.png" alt="Imagem 1">
-          <img src="3.png" alt="Imagem 2">
-          <img src="4.png" alt="Imagem 3">
-        </div>
-        <button class="anterior" onclick="imagemAnterior()">&#10094;</button>
-        <button class="proximo" onclick="proximaImagem()">&#10095;</button>
-      </div>
 
+    <div class="promo-alert" id="promoAlert">
+        <span class="promo-message">🎉 Super Promoção! 10% Na sua primeira compra usando o cupom: PRIMEIRACOMPRA 🎉</span>
+        <button class="close-btn" onclick="fecharAlerta()">X</button>
+    </div>
+
+    
     <footer>
         <p>&copy; Direitos Reservados a Nippofun Int.</p>
     </footer>
