--- a/livros.html
+++ b/livros.html
@@ -27,6 +27,10 @@
                     </button></li>
                 </ul>
             </nav>
+            <div class="pesquisa-container">
+                <input type="text" id="barraPesquisa" placeholder="Pesquisar produtos..." onkeyup="filtrarProdutos()">
+            </div>
+            
         </div>
     </header>
 
