--- a/livros.html
+++ b/livros.html
@@ -30,9 +30,14 @@
             <div class="pesquisa-container">
                 <input type="text" id="barraPesquisa" placeholder="Pesquisar produtos..." onkeyup="filtrarProdutos()">
             </div>
-            
         </div>
     </header>
+
+    <div class="alert-addCarrinho" id="addCarrinho">
+        <span class="addCarrinhoMessage">Produto adicionado ao carrinho com sucesso!</span>
+        <button class="close-btn" onclick="fecharAlerta()">X</button>
+    </div>
+
         <div class="main-content">
             <body>
                 <section class="catalogo">
@@ -42,7 +47,7 @@
                             <h2>No Longer Human</h2>
                             <p class="descricao">Minha vida tem sido uma vida de muita vergonha. Não consigo nem imaginar o que deve ser viver a vida de um ser humano.</p>
                             <p class="preco">Preço: R$ XX,XX</p>
-                            <button id="comprar" onclick="adicionarAoCarrinho('No Longer Human')">Comprar</button>
+                            <button id="comprar" onclick="adicionarAoCarrinho('No Longer Human'); exibirAlertaCarrinho()">Comprar</button>
                         </div>
                     </div>
 
@@ -53,7 +58,7 @@
                             <h2>Uzumaki</h2>
                             <p class="descricao">Acontecimentos grotescos começam a surgir em Kurôzu, a pequena localidade onde Kirie Goshima nasceu e cresceu.</p>
                             <p class="preco">Preço: R$ XX,XX</p>
-                            <button id="comprar" onclick="adicionarAoCarrinho('Uzumaki')">Comprar</button>
+                            <button id="comprar" onclick="adicionarAoCarrinho('Uzumaki'); exibirAlertaCarrinho()">Comprar</button>
                         </div>
                     </div>
 
@@ -64,7 +69,7 @@
                             <h2>Homunculus</h2>
                             <p class="descricao">Do criador de Ichi the Killer e Voyeur, esse conto de terror sobrenatural de sucesso O que Nakoshi verá de diferente quando acordar após passar por um estranho procedimento cirurgico por dinheiro?</p>
                             <p class="preco">Preço: R$ XX,XX</p>
-                            <button id="comprar" onclick="adicionarAoCarrinho('Homunculus')">Comprar</button>
+                            <button id="comprar" onclick="adicionarAoCarrinho('Homunculus'); exibirAlertaCarrinho()">Comprar</button>
                         </div>
                     </div>
                     <div class="produto-card">
@@ -74,7 +79,7 @@
                             <h2>Evangelion</h2>
                             <p class="descricao">Uma trama complexa, que aborda temas profundos como a psique humana, seus conflitos internos e relacionamentos.</p>
                             <p class="preco">Preço: R$ XX,XX</p>
-                            <button id="comprar" onclick="adicionarAoCarrinho('Evangelion')">Comprar</button>
+                            <button id="comprar" onclick="adicionarAoCarrinho('Evangelion'); exibirAlertaCarrinho()">Comprar</button>
                         </div>
                     </div>
                     <div class="produto-card">
@@ -84,7 +89,7 @@
                             <h2>Berserk</h2>
                             <p class="descricao">O misterioso Guts, o "Espadachim Negro", carrega em sua mão mecânica uma enorme espada, e em seu pescoço uma estranha marca que atrai forças demoníacas. Em sua busca por vingança contra um antigo inimigo, nem tudo sai a seu favor, e ele recebe ajuda de uma fantástica criatura.</p>
                             <p class="preco">Preço: R$ XX,XX</p>
-                            <button id="comprar" onclick="adicionarAoCarrinho('Berserk')">Comprar</button>
+                            <button id="comprar" onclick="adicionarAoCarrinho('Berserk'); exibirAlertaCarrinho()">Comprar</button>
                         </div>
                     </div>
                     <div class="produto-card">
@@ -94,7 +99,7 @@
                             <h2>Viland Saga</h2>
                             <p class="descricao">Quando criança, Thorfinn, filho do lendário guerreiro viking Thors, vive sem saber o passado do pai, que descobriu após anos no campo de batalha algo mais valioso do que matar seus iguais, viver sua vida de paz. Ao saber os tempos de guerra de seu pai, o garoto se revolta e vai à guerra com ele, mas acaba sendo tarde demais quando reconhece o valor dele.</p>
                             <p class="preco">Preço: R$ XX,XX</p>
-                            <button id="comprar" onclick="adicionarAoCarrinho('Viland Saga')">Comprar</button>
+                            <button id="comprar" onclick="adicionarAoCarrinho('Viland Saga'); exibirAlertaCarrinho()">Comprar</button>
                         </div>
                     </div>
                     <div class="produto-card">
@@ -104,7 +109,7 @@
                             <h2>Sala de aula que derreteu</h2>
                             <p class="descricao">E se pedir desculpas fosse o suficiente para escapar dos seus problemas? Yuma Azawa é um estudante de aparência inofensiva que pede perdão compulsivamente a todos ao seu redor. Ajoelhado, entre uma súplica e outra, que despertam as mais diversas reações em quem as escuta — de respostas violentas a sentimentos de conforto —, lentamente, algo começa a fazer com que as pessoas em volta de Yuma derretam, até virarem uma massa viscosa e nojenta no chão.</p>
                             <p class="preco">Preço: R$ XX,XX</p>
-                            <button id="comprar" onclick="adicionarAoCarrinho('Sala de aula que derreteu')">Comprar</button>
+                            <button id="comprar" onclick="adicionarAoCarrinho('Sala de aula que derreteu'); exibirAlertaCarrinho()">Comprar</button>
                         </div>
                     </div>
                     <div class="produto-card">
@@ -115,7 +120,7 @@
                             <p class="descricao">Uma malícia cada vez maior. Um terror que entorpece a mente. As sementes do horror são plantadas nessa coleção dos primeiros trabalhos de Junji Ito.
                             Uma família vingativa esconde um desertor do exército por oito anos após o fim da Segunda Guerra Mundial, envolvendo-o em uma falsa realidade em que a guerra nunca terminou. Duas meninas são parecidas, mas não são gêmeas. E o pesadelo de um garoto ameaça se espalhar pelo mundo real...</p>
                             <p class="preco">Preço: R$ XX,XX</p>
-                            <button id="comprar" onclick="adicionarAoCarrinho('Deserter')">Comprar</button>
+                            <button id="comprar" onclick="adicionarAoCarrinho('Deserter'); exibirAlertaCarrinho()">Comprar</button>
                         </div>
                     </div>
                     <div class="produto-card">
@@ -125,7 +130,7 @@
                             <h2>Soichi</h2>
                             <p class="descricao">ouichi Tsujii, um garoto antissocial, é apaixonado por tudo que há de perverso e oculto e se diverte com o seu suposto poder de lançar perigosas maldições em qualquer oportunidade, principalmente ao ser contrariado! E quando seus primos Michina e Yusuke começam a frequentar sua casa nas férias, ele ganha novos alvos para atormentar.</p>
                             <p class="preco">Preço: R$ XX,XX</p>
-                            <button id="comprar" onclick="adicionarAoCarrinho('Soichi')">Comprar</button>
+                            <button id="comprar" onclick="adicionarAoCarrinho('Soichi'); exibirAlertaCarrinho()">Comprar</button>
                         </div>
                     </div>
                     <div class="produto-card">
@@ -135,7 +140,7 @@
                             <h2>Tomie</h2>
                             <p class="descricao">Podem matá-la quantas vezes quiserem, que ela ainda assim ressurgirá neste mundo, mais bela do que nunca. Ninguém sabe ao certo quem ou o que ela é, mas uma coisa é certa: se você se deparar com Tomie Kawakami, seu destino estará selado.</p>
                             <p class="preco">Preço: R$ XX,XX</p>
-                            <button id="comprar" onclick="adicionarAoCarrinho('Tomie')">Comprar</button>
+                            <button id="comprar" onclick="adicionarAoCarrinho('Tomie'); exibirAlertaCarrinho()">Comprar</button>
                         </div>
                     </div>
                     <div class="produto-card">
@@ -145,7 +150,7 @@
                             <h2>Tokyo Ghoul</h2>
                             <p class="descricao">Em Tokyo, criaturas conhecidas como "Ghouls" vivem entre os humanos e os devoram para sobreviver. Alheio a eles, o jovem universitário Ken Kaneki leva uma vida pacata entre livros, até que um trágico encontro o coloca diante desses seres e o obriga a lutar por sua humanidade.</p>
                             <p class="preco">Preço: R$ XX,XX</p>
-                            <button id="comprar" onclick="adicionarAoCarrinho('Tokyo Ghoul')">Comprar</button>
+                            <button id="comprar" onclick="adicionarAoCarrinho('Tokyo Ghoul'); exibirAlertaCarrinho()">Comprar</button>
                         </div>
                     </div>
                     <div class="produto-card">
@@ -155,7 +160,7 @@
                             <h2>Chainsaw Man</h2>
                             <p class="descricao">Denji é um jovem extremamente pobre que junto de Pochita, seu demônio de estimação, trabalha feito um condenado como Caçador de Demônios para pagar a imensa dívida que possui. Mas sua vida de miséria está prestes a mudar graças a uma traição brutal!! Aqui começa a história de um novo anti-herói que com um demônio em seu corpo, caça demônios!!</p>
                             <p class="preco">Preço: R$ XX,XX</p>
-                            <button id="comprar" onclick="adicionarAoCarrinho('Chainsaw Man')">Comprar</button>
+                            <button id="comprar" onclick="adicionarAoCarrinho('Chainsaw Man'); exibirAlertaCarrinho()">Comprar</button>
                         </div>
                     </div>
                 </section>
