--- a/livros.html
+++ b/livros.html
@@ -35,7 +35,7 @@
 
     <div class="alert-addCarrinho" id="addCarrinho">
         <span class="addCarrinhoMessage">Produto adicionado ao carrinho com sucesso!</span>
-        <button class="close-btn" onclick="fecharAlerta()">X</button>
+        <button class="close-btn" onclick="fecharAlertaCarrinho()">X</button>
     </div>
 
         <div class="main-content">
