--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 </head>
 <body>
     <header>
-        <div class="maicon">
+        <div class="logo1">
             <div class="logo">
                 <a href="index.html">
                     <img src="logo.png.png" alt="Logo do site">
                 </a>
             </div>
 
-            <nav id="jorge">
+            <nav id="listaHeader">
                 <ul> 
                     <li><a href="index.html">Home</a></li>
                     <li><a href="livros.html">Livros</a></li>
