--- a/livros.html
+++ b/livros.html
@@ -12,11 +12,13 @@
 
 <body>
     <header>
-        <div class="maicon">
-            <a href="index.html">
-                <img src="logo.png.png" alt="Logo do site">
-            </a>
-            <nav id="jorge">
+        <div class="logo1">
+            <div class="logo">
+                <a href="index.html">
+                    <img src="logo.png.png" alt="Logo do site">
+                </a>
+            </div>
+            <nav id="listaHeader">
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="livros.html">Livros</a></li>
