--- a/carrinho.html
+++ b/carrinho.html
@@ -12,11 +12,13 @@
 
 <body>
     <header>
-        <div class="maicon">
-            <a href="index.html">
-                <img src="logo.png.png" alt="Logo do site">
-            </a>
-            <nav id="jorge">
+        <div class="logo1">
+            <div class="logo">
+                <a href="index.html">
+                    <img src="logo.png.png" alt="Logo do site">
+                </a>
+            </div>
+            <nav id="listaHeader">
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="livros.html">Livros</a></li>
@@ -31,10 +33,11 @@
             </nav>
         </div>
     </header>
-
-        <h1>Carrinho de Compras</h1>
         <br>
-        <button class="botao-voltar" onclick="window.location.href='livros.html'">Voltar ao Catálogo</button>
+        <h1>Carrinho de Compras   
+            <button class="botao-voltar" onclick="window.location.href='livros.html'">Voltar ao Catálogo</button>
+        </h1>
+        
         
         <div id="calculoFrete">
             <label for="cep">Digite seu CEP:</label>
