--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     <script src="script.js"></script>
 </head>
 <body>
+    <script>
+        window.onload = function() {
+            setTimeout(exibirAlertaPromocao, 3000);
+        };
+    </script>
     <header>
         <div class="logo1">
             <div class="logo">
